# NeRF-Editing-GP

./: .gitignore  README.md  a.out  commands.txt  post_training.sh  render_deform.sh  requirements.txt
OpenVolumeMesh/OpenVolumeMesh/: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md
OpenVolumeMesh/OpenVolumeMesh/CI/: Windows.bat  ci-cppcheck.sh  ci-linux.sh  ci-mac.sh
OpenVolumeMesh/OpenVolumeMesh/codegen/ResourceManager_convenience_functions/: .gitignore  generate.sh  vertex_functions.hh
OpenVolumeMesh/OpenVolumeMesh/documentation/: CMakeLists.txt  mainpage.docu
OpenVolumeMesh/OpenVolumeMesh/documentation/subpages/: ascii_file_format.docu  binary_file_format.docu  concepts.docu  file_formats.docu  iterators_and_circulators.docu
OpenVolumeMesh/OpenVolumeMesh/documentation/tutorials/: tutorial_02.docu  tutorial_03.docu  tutorial_04.docu
OpenVolumeMesh/OpenVolumeMesh/examples/: CMakeLists.txt
OpenVolumeMesh/OpenVolumeMesh/examples/vtk_datafile_2/: read_vtk.cc
OpenVolumeMesh/OpenVolumeMesh/examples/vtk_datafile_2/vtk_files/: s01c_cube.vtk
OpenVolumeMesh/OpenVolumeMesh/extra/ovmb-kaitai/: README.md  ovmb.ksy
OpenVolumeMesh/OpenVolumeMesh/license/: LICENSEHEADER
OpenVolumeMesh/OpenVolumeMesh/src/: CMakeLists.txt
OpenVolumeMesh/OpenVolumeMesh/src/FileConverter/: CMakeLists.txt  MeshGenerator.hpp  ovm_converter.cc  ovmb_converter.cc
OpenVolumeMesh/OpenVolumeMesh/src/FileConverter/Grammars/: Netgen.hpp  Tetmesh.hpp
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Attribs/: ColorAttrib.hh  ColorAttribT_impl.hh  InterfaceAttrib.cc  InterfaceAttrib.hh  NormalAttrib.hh  NormalAttribT_impl.hh  OpenVolumeMeshStatus.cc  OpenVolumeMeshStatus.hh  StatusAttrib.cc  StatusAttrib.hh  StatusAttribT_impl.hh  TexCoordAttrib.hh  TexCoordAttribT_impl.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Core/: BaseEntities.cc  BaseEntities.hh  Entities.hh  EntityUtils.hh  ForwardDeclarations.hh  GeometryKernel.hh  HandleIndexing.hh  Handles.cc  Handles.hh  Iterators.cc  Iterators.hh  OpenVolumeMeshHandle.hh  PropertyPtr.hh  ResourceManager.cc  ResourceManager.hh  ResourceManagerT_impl.hh  TopologyKernel.cc  TopologyKernel.hh  TypeNames.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Core/Iterators/: BaseCirculator.hh  BaseIterator.hh  BoundaryHalfFaceHalfFaceIter.cc  BoundaryHalfFaceHalfFaceIter.hh  BoundaryItemIter.cc  BoundaryItemIter.hh  CellCellIter.cc  CellCellIter.hh  CellIter.cc  CellIter.hh  CellVertexIter.cc  CellVertexIter.hh  EdgeIter.cc  EdgeIter.hh  FaceIter.cc  FaceIter.hh  GenericCirculator.hh  HalfEdgeCellIter.cc  HalfEdgeCellIter.hh  HalfEdgeHalfFaceIter.cc  HalfEdgeHalfFaceIter.hh  HalfEdgeIter.cc  HalfEdgeIter.hh  HalfFaceIter.cc  HalfFaceIter.hh  HalfFaceVertexIter.cc  HalfFaceVertexIter.hh  VertexCellIter.cc  VertexCellIter.hh  VertexFaceIter.cc  VertexFaceIter.hh  VertexIter.cc  VertexIter.hh  VertexOHalfEdgeIter.cc  VertexOHalfEdgeIter.hh  VertexVertexIter.cc  VertexVertexIter.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Core/Iterators/detail/: CellEdgeIterImpl.cc  CellEdgeIterImpl.hh  CellFaceIterImpl.cc  CellFaceIterImpl.hh  CellHalfEdgeIterImpl.cc  CellHalfEdgeIterImpl.hh  CellHalfFaceIterImpl.cc  CellHalfFaceIterImpl.hh  EdgeCellIterImpl.cc  EdgeCellIterImpl.hh  EdgeFaceIterImpl.cc  EdgeFaceIterImpl.hh  EdgeHalfFaceIterImpl.cc  EdgeHalfFaceIterImpl.hh  FaceEdgeIterImpl.cc  FaceEdgeIterImpl.hh  FaceHalfEdgeIterImpl.cc  (+15 more)
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Core/Properties/: PropertyIterator.hh  PropertyPtr.hh  PropertyStorageBase.cc  PropertyStorageBase.hh  PropertyStoragePtr.hh  PropertyStorageT.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Core/detail/: Tracking.hh  internal_type_name.cc  internal_type_name.hh  swap_bool.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/FileManager/: FileManager.cc  FileManager.hh  FileManagerT_impl.hh  Serializers.cc  Serializers.hh  SerializersT_impl.hh  TypeNames.cc  TypeNames.hh  VtkColorReader.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Geometry/: Vector11T.hh  VectorT.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/IO/: IO.hh  PropertyCodecs.cc  PropertyCodecs.hh  PropertyCodecsEigen.hh  PropertyCodecsT_impl.hh  ReadOptions.hh  WriteOptions.hh  enums.cc  enums.hh  ovmb_read.hh  ovmb_write.hh  ovmb_write_impl.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/IO/detail/: BinaryFileReader.cc  BinaryFileReader.hh  BinaryFileReader_impl.hh  BinaryFileWriter.cc  BinaryFileWriter.hh  BinaryIStream.cc  BinaryIStream.hh  Decoder.cc  Decoder.hh  Encoder.cc  Encoder.hh  GeometryReader.cc  GeometryReader.hh  GeometryReaderT_impl.hh  GeometryWriter.cc  GeometryWriter.hh  GeometryWriterT_impl.hh  TopologyType.hh  WriteBuffer.cc  WriteBuffer.hh  exceptions.hh  ovmb_codec.cc  ovmb_codec.hh  ovmb_format.cc  ovmb_format.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Mesh/: HexahedralMesh.hh  HexahedralMeshIterators.cc  HexahedralMeshIterators.hh  HexahedralMeshTopologyKernel.cc  HexahedralMeshTopologyKernel.hh  PolyhedralMesh.hh  TetrahedralGeometryKernel.hh  TetrahedralMesh.hh  TetrahedralMeshIterators.cc  TetrahedralMeshIterators.hh  TetrahedralMeshTopologyKernel.cc  TetrahedralMeshTopologyKernel.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/System/: Deprecation.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Unstable/: README.md
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Unstable/Topology/: TetTopology.cc  TetTopology.hh  TetTopology_impl.hh  TriangleTopology.cc  TriangleTopology.hh
OpenVolumeMesh/OpenVolumeMesh/src/OpenVolumeMesh/Util/: SmartTagger.hh
OpenVolumeMesh/OpenVolumeMesh/src/Unittests/: CMakeLists.txt  unittests_attribs.cc  unittests_basics.cc  unittests_common.hh  unittests_files.cc  unittests_handles.cc  unittests_iterators.cc  unittests_local_topology.cc  unittests_mesh_copies.cc  unittests_properties.cc  unittests_smart_tagger.cc  unittests_swap_entities.cc
OpenVolumeMesh/OpenVolumeMesh/src/Unittests/TestFiles/: .gitignore  Cube_with_props.ovmb  Cylinder.ovmb  NonManifold.ovmb
(+15 files in other folders)
